--- a/20171011/index.html
+++ b/20171011/index.html
@@ -14,10 +14,10 @@
     <main>
         <section id="schoInfo">
             <div class="title">
-                <h1>School Infomation</h1>
+                <h1>学校信息</h1>
                 <div>
-                    <button>cancel</button>
-                    <button>save</button>
+                    <button>取消</button>
+                    <button>保存</button>
                 </div>
             </div>
             <div class="ta">
@@ -26,7 +26,7 @@
                     <div class="optionArea">
                         <div class="flexP">
                             <input type="text"></input>
-                            <select name="">
+                            <select name="" class="slYear">
                                 <option value="">入学年份</option>
                             </select>
                         </div>
@@ -58,85 +58,225 @@
                         <a href="">添加大学</a>
                     </div>
                 </div>
-            </div>
-            <div class="tr">
-                <h2>高中</h2>
-                <div class="optionArea">
-                    <div class="flexP">
-                        <input type="text"></input>
-                        <select name="">
-                            <option value="">入学年份</option>
-                        </select>
+                <div class="tr">
+                    <h2>高中</h2>
+                    <div class="optionArea">
+                        <div class="flexP">
+                            <input type="text"></input>
+                            <select name="" class="slYear">
+                                <option value="">入学年份</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="tr">
-                <h2>班级</h2>
-                <div class="optionArea">
-                    <div class="flexP">
-                        <span>高一</span>
-                        <input type="text"></input>
-                        <span>班</span>
+                <div class="tr">
+                    <h2>班级</h2>
+                    <div class="optionArea">
+                        <div class="flexP">
+                            <span>高一</span>
+                            <input type="text"></input>
+                            <span>班</span>
+                        </div>
+                        <div class="flexP">
+                            <span>高二</span>
+                            <input type="text"></input>
+                            <span>班</span>
+                        </div>
+                        <div class="flexP">
+                            <span>高三</span>
+                            <input type="text"></input>
+                            <span>班</span>
+                        </div>
+                        <a href="">删除这个高中</a>
+                        <a href="">添加高中</a>
                     </div>
-                    <div class="flexP">
-                        <span>高二</span>
-                        <input type="text"></input>
-                        <span>班</span>
-                    </div>
-                    <div class="flexP">
-                        <span>高三</span>
-                        <input type="text"></input>
-                        <span>班</span>
-                    </div>
-                    <a href="">删除这个高中</a>
-                    <a href="">添加高中</a>
                 </div>
-            </div>
-            <div class="tr">
-                <h2>中专技校</h2>
-                <div class="optionArea">
-                    <div class="flexP">
-                        <input type="text"></input>
-                        <select name="">
-                            <option value="">入学年份</option>
-                        </select>
-                        <a href="">删除</a>
+                <div class="tr">
+                    <h2>中专技校</h2>
+                    <div class="optionArea">
+                        <div class="flexP">
+                            <input type="text"></input>
+                            <select name="" class="slYear">
+                                <option value="">入学年份</option>
+                            </select>
+                            <a href="">删除</a>
+                        </div>
+                        <a href="">添加中专技校</a>
                     </div>
-                    <a href="">添加中专技校</a>
                 </div>
-            </div>
-            <div class="tr">
-                <h2>初中</h2>
-                <div class="optionArea">
-                    <div class="flexP">
-                        <input type="text"></input>
-                        <select name="">
-                            <option value="">入学年份</option>
-                        </select>
-                        <a href="">删除</a>
+                <div class="tr">
+                    <h2>初中</h2>
+                    <div class="optionArea">
+                        <div class="flexP">
+                            <input type="text"></input>
+                            <select name="" class="slYear">
+                                <option value="">入学年份</option>
+                            </select>
+                            <a href="">删除</a>
+                        </div>
+                        <a href="">添加初中</a>
                     </div>
-                    <a href="">添加初中</a>
                 </div>
-            </div>
-            <div class="tr">
-                <h2>小学</h2>
-                <div class="optionArea">
-                    <div class="flexP">
-                        <input type="text"></input>
-                        <select name="">
-                            <option value="">入学年份</option>
-                        </select>
-                        <a href="">删除</a>
+                <div class="tr">
+                    <h2>小学</h2>
+                    <div class="optionArea">
+                        <div class="flexP">
+                            <input type="text"></input>
+                            <select name="" class="slYear">
+                                <option value="">入学年份</option>
+                            </select>
+                            <a href="">删除</a>
+                        </div>
+                        <a href="">添加小学</a>
                     </div>
-                    <a href="">添加小学</a>
                 </div>
             </div>
         </section>
         <section>
-            <div id="emotion">123</div>
-            <div id="basicInfo">123</div>
+            <div id="emotion">
+                <div class="title">
+                    <h1>感情状态</h1>
+                    <div>
+                        <button>取消</button>
+                        <button>保存</button>
+                    </div>
+                </div>
+                <div class="ta">
+                    <div class="tr">
+                        <h2>感情状态</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <select name="">
+                                    <option value="">不填写</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="basicInfo">
+                <div class="title">
+                    <h1>基本信息</h1>
+                    <div>
+                        <button>取消</button>
+                        <button>保存</button>
+                    </div>
+                </div>
+                <div class="ta">
+                    <div class="tr">
+                        <span>*</span>
+                        <h2>姓名</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <input type="text"></input>
+                                <span>可在中文姓名后添加英文名称</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <h2>昵称</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <input type="text"></input>
+                                <span>只有星级用户才可使用</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <span>*</span>
+                        <h2>性别</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <form class=radio>
+                                    <input name="sex" type="radio"/>男
+                                    <input name="sex" type="radio"/>女
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <span>*</span>
+                        <h2>家乡</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <select name=""  id="htPro" class="provin" onchange="htGetCity()">
+                                    <!-- <option value="">省</option> -->
+                                </select>
+                                <select name="" id="hometown">
+                                    <option value="">市</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <span>*</span>
+                        <h2>所在地</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <select name="" id="plPro" class="provin" onchange="plGetCity()">
+                                    <!-- <option value="">省</option> -->
+                                </select>
+                                <select name="" class="place">
+                                    <!-- <option value="">市</option> -->
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <span>*</span>
+                        <h2>生日</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <form class=radio>
+                                    <input name="birth" type="radio"/>公历生日
+                                    <input name="birth" type="radio"/>农历生日
+                                </form>
+                            </div>
+                            <div class="flexP">
+                                <select name="" id="birY" onchange="birGetMonth()">
+                                    <!-- <option value="">1900</option> -->
+                                </select>
+                                <select name="" id="birM" class="slMonth" onchange="birGetDate()">
+                                    <!-- <option value="">10</option> -->
+                                </select>
+                                <select name="" id="birD">
+                                    <!-- <option value="">14</option> -->
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <h2>个性域名</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <a href="">立即抢注属于自己的个性域名，如 yourname.renren.com</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tr">
+                        <h2>主页显示</h2>
+                        <div class="optionArea">
+                            <div class="flexP">
+                                <select name="" class="place">
+                                    <!-- <option value="">市</option> -->
+                                </select>
+                            </div>
+                            <span>可设置所在地及通过认证的资料信息</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer>
+        <a href="https://www.github.com/ctuu">
+            <svg class="icon" width="24px" height="24px" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <path d="M511.974 15.759C229.233 15.759 0.007 243.57 0.007 524.59c0 224.8 146.666 415.512 350.136 482.754 25.628 4.711 34.95-10.96 34.95-24.484 0-12.057-0.45-44.031-0.67-86.54-142.426 30.776-172.48-68.219-172.48-68.219-23.285-58.771-56.852-74.403-56.852-74.403-46.487-31.547 3.531-30.931 3.531-30.931 51.379 3.613 78.423 52.414 78.423 52.414 45.66 77.76 119.846 55.257 149.005 42.312 4.632-32.941 17.891-55.315 32.5-68.063-113.673-12.834-233.188-56.485-233.188-251.45 0-55.567 19.938-100.992 52.684-136.569-5.239-12.81-22.843-64.543 5.026-134.628 0 0 42.982-13.667 140.811 52.2 40.816-11.334 84.622-16.997 128.166-17.17 43.483 0.187 87.302 5.836 128.173 17.17 97.76-65.867 140.68-52.2 140.68-52.2 27.938 70.085 10.34 121.819 5.096 134.628 32.813 35.576 52.613 81.002 52.613 136.569 0 195.419-119.688 238.473-233.746 251.021 18.354 15.723 34.736 46.839 34.736 94.317 0 67.98-0.613 122.837-0.613 139.531 0 13.627 9.203 29.479 35.195 24.435 203.246-67.386 349.811-257.956 349.811-482.692C1023.994 243.57 794.762 15.759 511.974 15.759z"
+                />
+            </svg>
+        </a>
+        <p>Design by ctuu</p>
+    </footer>
 </body>
 
 </html>
