--- a/20171011/index.html
+++ b/20171011/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./resouce/font-awesome/css/font-awesome.min.css">
     <script src="./JS/index.js"></script>
     <title>Document</title>
 </head>
@@ -14,10 +15,11 @@
     <main>
         <section id="schoInfo">
             <div class="title">
+                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                 <h1>学校信息</h1>
                 <div>
-                    <button>取消</button>
-                    <button>保存</button>
+                    <button class="btnCancel">取消</button>
+                    <button class="btnSave">保存</button>
                 </div>
             </div>
             <div class="ta">
@@ -74,17 +76,17 @@
                     <div class="optionArea">
                         <div class="flexP">
                             <span>高一</span>
-                            <input type="text"></input>
+                            <input type="text" style="width: 10%"></input>
                             <span>班</span>
                         </div>
                         <div class="flexP">
                             <span>高二</span>
-                            <input type="text"></input>
+                            <input type="text" style="width: 10%"></input>
                             <span>班</span>
                         </div>
                         <div class="flexP">
                             <span>高三</span>
-                            <input type="text"></input>
+                            <input type="text" style="width: 10%"></input>
                             <span>班</span>
                         </div>
                         <a href="">删除这个高中</a>
@@ -135,10 +137,11 @@
         <section>
             <div id="emotion">
                 <div class="title">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
                     <h1>感情状态</h1>
                     <div>
-                        <button>取消</button>
-                        <button>保存</button>
+                        <button class="btnCancel">取消</button>
+                        <button class="btnSave">保存</button>
                     </div>
                 </div>
                 <div class="ta">
@@ -156,10 +159,11 @@
             </div>
             <div id="basicInfo">
                 <div class="title">
+                    <i class="fa fa-user" aria-hidden="true"></i>
                     <h1>基本信息</h1>
                     <div>
-                        <button>取消</button>
-                        <button>保存</button>
+                        <button class="btnCancel">取消</button>
+                        <button class="btnSave">保存</button>
                     </div>
                 </div>
                 <div class="ta">
@@ -188,8 +192,8 @@
                         <div class="optionArea">
                             <div class="flexP">
                                 <form class=radio>
-                                    <input name="sex" type="radio"/>男
-                                    <input name="sex" type="radio"/>女
+                                    <input name="sex" type="radio" />男
+                                    <input name="sex" type="radio" />女
                                 </form>
                             </div>
                         </div>
@@ -199,7 +203,7 @@
                         <h2>家乡</h2>
                         <div class="optionArea">
                             <div class="flexP">
-                                <select name=""  id="htPro" class="provin" onchange="htGetCity()">
+                                <select name="" id="htPro" class="provin" onchange="htGetCity()">
                                     <!-- <option value="">省</option> -->
                                 </select>
                                 <select name="" id="hometown">
@@ -228,8 +232,8 @@
                         <div class="optionArea">
                             <div class="flexP">
                                 <form class=radio>
-                                    <input name="birth" type="radio"/>公历生日
-                                    <input name="birth" type="radio"/>农历生日
+                                    <input name="birth" type="radio" />公历生日
+                                    <input name="birth" type="radio" />农历生日
                                 </form>
                             </div>
                             <div class="flexP">
